--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,30 +1,43 @@
-<header class="site-header" role="banner">
-
-  <div class="wrapper">
-    {%- assign default_paths = site.pages | map: "path" -%}
-    {%- assign page_paths = site.header_pages | default: default_paths -%}
-    <a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
-
-    {%- if page_paths -%}
-      <nav class="site-nav">
-        <input type="checkbox" id="nav-trigger" class="nav-trigger" />
-        <label for="nav-trigger">
-          <span class="menu-icon">
-            <svg viewBox="0 0 18 15" width="18px" height="15px">
-              <path d="M18,1.484c0,0.82-0.665,1.484-1.484,1.484H1.484C0.665,2.969,0,2.304,0,1.484l0,0C0,0.665,0.665,0,1.484,0 h15.032C17.335,0,18,0.665,18,1.484L18,1.484z M18,7.516C18,8.335,17.335,9,16.516,9H1.484C0.665,9,0,8.335,0,7.516l0,0 c0-0.82,0.665-1.484,1.484-1.484h15.032C17.335,6.031,18,6.696,18,7.516L18,7.516z M18,13.516C18,14.335,17.335,15,16.516,15H1.484 C0.665,15,0,14.335,0,13.516l0,0c0-0.82,0.665-1.483,1.484-1.483h15.032C17.335,12.031,18,12.695,18,13.516L18,13.516z"/>
-            </svg>
-          </span>
-        </label>
-
-        <div class="trigger">
-          {%- for path in page_paths -%}
-            {%- assign my_page = site.pages | where: "path", path | first -%}
-            {%- if my_page.title -%}
-            <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
-            {%- endif -%}
-          {%- endfor -%}
+<header id="top">
+  <div id="index-banner" class="parallax-container">
+    <div class="section no-pad-bot">
+      <div class="container">
+        <br><br>
+        <h1 class="header center white-text">{{ site.title }}</h1>
+        <div class="row center">
+          <h5 class="header col s12 light">{{ site.description }}</h5>
         </div>
-      </nav>
-    {%- endif -%}
+        <div class="row center hide-on-med-and-down">
+          <a href="">
+            <div class="col s6 m6 l3 xl3 center">
+            <i class="fa fa-file-text fa-4x"></i><br><h2><h5>
+            لورم ایپسوم</h5>Blog
+            </div>
+          </a>
+          <a href="">
+            <div class="col s6 m6 l3 xl3 center">
+              <i class="fa fa-code fa-4x"></i><br><h2><h5>
+              لورم ایپسوم</h5>Programming
+            </div>
+          </a>
+          <a href="">
+            <div class="col s6 m6 l3 xl3 center">
+              <i class="fa fa-tree fa-4x"></i><br><h2><h5>
+              لورم ایپسوم</h5>Travel Gallery
+            </div>
+          </a>
+          <a href="">
+            <div class="col s6 m6 l3 xl3 center">
+              <i class="fa fa-check-square-o  fa-4x"></i><br><h2><h5>
+              لورم ایپسوم</h5>portfolio
+            </div>
+          </a>
+        </div>
+        <br><br>
+
+      </div>
+    </div>
+    <div class="parallax"><img src="assets/img/me1.jpeg" alt="Unsplashed background img 1"></div>
   </div>
+
 </header>
