--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,13 +1,17 @@
-<nav class="white" role="navigation">
-    <div class="nav-wrapper container">
-        <a id="logo-container" href="#" class="brand-logo">Logo</a>
-        <ul class="left hide-on-med-and-down">
-            <li><a href="#">Navbar Link</a></li>
-        </ul>
+<div class="navbar-fixed">
+    <nav class="white" role="navigation">
+        <div class="nav-wrapper container">
+            <a id="logo-container" href="{{ site.url }}" class="brand-logo">IAMRF</a>
+            <ul class="left hide-on-med-and-down">
+                <li><a href="#"><i class="fa fa-home"></i> Home </a></li>
+            </ul>
 
-        <ul id="nav-mobile" class="sidenav">
-            <li><a href="#">Navbar Link</a></li>
-        </ul>
-        <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-    </div>
-</nav>
+            
+            <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+        </div>
+    </nav>
+</div>
+
+<ul id="nav-mobile" class="sidenav">
+    <li><a href="#"><i class="fa fa-home"></i> Home </a></li>
+</ul>
