--- a/_includes/header.html
+++ b/_includes/header.html
@@ -34,10 +34,12 @@
           </a>
         </div>
         <br><br>
+        
+        <a href="#" class="next-section-btn btn-large waves-effect waves-light pulse pink darken-3"><i class="fa fa-angle-double-down"></i></a>
 
       </div>
     </div>
-    <div class="parallax"><img src="assets/img/me1.jpeg" alt="Unsplashed background img 1"></div>
+    <div class="parallax"><img src="assets/img/top-parallax.jpg" alt="Unsplashed background img 1"></div>
   </div>
 
 </header>
