Blog latest posts section was created

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -35,11 +35,11 @@
         </div>
         <br><br>
         
-        <a href="#" class="next-section-btn btn-large waves-effect waves-light pulse pink darken-3"><i class="fa fa-angle-double-down"></i></a>
+        <a href="#" class="next-section-btn btn-large waves-effect waves-light pulse grey lighten-3 grey-text text-darken-3"><i class="fa fa-angle-double-down"></i></a>
 
       </div>
     </div>
-    <div class="parallax"><img src="assets/img/top-parallax.jpg" alt="Unsplashed background img 1"></div>
+    <div class="parallax"><img src="assets/img/top-parallax.jpg" alt="Top intro background"></div>
   </div>
 
 </header>
