--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,5 +1,5 @@
 <div class="navbar-fixed">
-    <nav class="white" role="navigation">
+    <nav id="main-navbar" class="white" role="navigation">
         <div class="nav-wrapper container">
             <a id="logo-container" href="{{ site.url }}" class="brand-logo">IAMRF</a>
             <ul class="left hide-on-med-and-down">
