--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,10 @@
 <div class="clearfix"></div>
 
   <!--  Scripts-->
-  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script
+  src="https://code.jquery.com/jquery-2.2.4.min.js"
+  integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+  crossorigin="anonymous"></script>
   <script src="assets/js/materialize.js"></script>
   <script src="assets/js/init.js"></script>
 
