head.html file updated for SEO issues

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: "fa" }}">
+<html lang="{{ page.lang | default: site.lang | default: 'fa' }}">
 
 {% include head.html %}
 
