RSS feed.xml was created

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,9 +15,9 @@
     {%- endif -%}
 
   <!-- CSS  -->
-  <link href="assets/css/materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="assets/css/materialize.rtl.min.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="assets/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="{{ site.url }}/assets/css/materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="{{ site.url }}/assets/css/materialize.rtl.min.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="{{ site.url }}/assets/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
