--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -2,16 +2,23 @@
     <nav id="main-navbar" class="white" role="navigation">
         <div class="nav-wrapper container">
             <a id="logo-container" href="{{ site.url }}" class="brand-logo">IAMRF</a>
-            <ul class="left hide-on-med-and-down">
-                <li><a href="#"><i class="fa fa-home"></i> Home </a></li>
+            <ul class="left hide-on-med-and-down">            
+                {% for page in site.pages %}
+                    {% if page.title!=404 %}
+                        <li><a href="{{ page.url }}"> {{ page.title }} </a></li>
+                    {% endif %}
+                {% endfor %}
             </ul>
 
-            
             <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         </div>
     </nav>
 </div>
 
 <ul id="nav-mobile" class="sidenav">
-    <li><a href="#"><i class="fa fa-home"></i> Home </a></li>
+    {% for page in site.pages %}
+        {% if page.title!=404 %}
+        <li><a href="{{ page.url }}"> {{ page.title }} </a></li>
+        {% endif %}
+    {% endfor %}
 </ul>
