--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -4,7 +4,7 @@
             <a id="logo-container" href="{{ site.url }}" class="brand-logo">IAMRF</a>
             <ul class="left hide-on-med-and-down">            
                 {% for page in site.pages %}
-                    {% if page.title!=404 %}
+                    {% if page.title %}
                         <li><a href="{{ page.url }}"> {{ page.title }} </a></li>
                     {% endif %}
                 {% endfor %}
@@ -16,8 +16,9 @@
 </div>
 
 <ul id="nav-mobile" class="sidenav">
+    <li><a href="{{ site.url }}">خانه</a></li>
     {% for page in site.pages %}
-        {% if page.title!=404 %}
+        {% if page.title %}
         <li><a href="{{ page.url }}"> {{ page.title }} </a></li>
         {% endif %}
     {% endfor %}
