Favicon and rf-logo.png was added to project

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,9 +21,9 @@
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-  <link rel="shortcut icon" type="image/png" href="/img/icon-196x196.png">
-  <link rel="shortcut icon" sizes="196x196" href="/img/icon-196x196.png">
-  <link rel="apple-touch-icon" href="/img/homescreenicon.png">
+  <link rel="shortcut icon" type="image/png" href="{{ site.url }}/assets/img/rf-logo.png">
+  <link rel="shortcut icon" sizes="196x196" href="{{ site.url }}/favicon.ico">
+  <link rel="apple-touch-icon" href="{{ site.url }}/assets/img/rf-logo.png">
 
    <!-- Facebook and Twitter integration -->
   <meta property="og:title" content="{{ page.title }}"/>
