--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,28 +8,28 @@
           <h5 class="header col s12 light">{{ site.description }}</h5>
         </div>
         <div class="row center hide-on-med-and-down">
-          <a href="">
+          <a href="{{ site.url }}/blog">
             <div class="col s6 m6 l3 xl3 center">
             <i class="fa fa-file-text fa-4x"></i><br><h2><h5>
-            لورم ایپسوم</h5>Blog
+            وبلاگ</h5>Blog
             </div>
           </a>
-          <a href="">
+          <a href="{{ site.url }}/articles">
             <div class="col s6 m6 l3 xl3 center">
               <i class="fa fa-code fa-4x"></i><br><h2><h5>
-              لورم ایپسوم</h5>Programming
+              مقالات</h5>Articles
             </div>
           </a>
-          <a href="">
+          <a href="{{ site.url }}/travels">
             <div class="col s6 m6 l3 xl3 center">
               <i class="fa fa-tree fa-4x"></i><br><h2><h5>
-              لورم ایپسوم</h5>Travel Gallery
+              سفرنامه</h5>Travel Gallery
             </div>
           </a>
-          <a href="">
+          <a href="{{ site.url }}/portfolio">
             <div class="col s6 m6 l3 xl3 center">
               <i class="fa fa-check-square-o  fa-4x"></i><br><h2><h5>
-              لورم ایپسوم</h5>portfolio
+              نمونه کار</h5>portfolio
             </div>
           </a>
         </div>
