add blog-latest-posts in intro.html and created 3 post pages for ex

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -29,13 +29,13 @@
           <a href="{{ site.url }}/portfolio">
             <div class="col s6 m6 l3 xl3 center">
               <i class="fa fa-check-square-o  fa-4x"></i><br><h2><h5>
-              نمونه کار</h5>portfolio
+              نمونه کار</h5>Portfolio
             </div>
           </a>
         </div>
         <br><br>
         
-        <a href="#" class="next-section-btn btn-large waves-effect waves-light pulse grey lighten-3 grey-text text-darken-3"><i class="fa fa-angle-double-down"></i></a>
+        <a href="#blog-latest-posts" class="next-section-btn btn-large waves-effect waves-light pulse grey lighten-3 grey-text text-darken-3"><i class="fa fa-angle-double-down"></i></a>
 
       </div>
     </div>
