--- a/_includes/blog_latest_posts.html
+++ b/_includes/blog_latest_posts.html
@@ -4,9 +4,20 @@
             <div class="row">
                 <div class="col s12 center grey-text text-darken-3">
                     <h3>
-                            پیشرو در زبان فارسی
+                            آخرین مطالب وبلاگ
                     </h3>
+                    <div class="divider"></div>
                 </div>
+                {% for post in site.posts | limit: 3%}
+                    <div class="col s12 m12 l4">
+                        <a href="{{ post.url }}" class="red-text text-darken-3 waves-effect waves-red"><h4>{{ post.title }}</h4></a>
+                        <p>{{ post.excerpt }}</p>
+                        <a href="{{ post.url }}" class="left btn red darken-3 waves-effect waves-light">ادامه مطلب</a>
+                        
+                        <div class="clearfix"></div>
+                        <div class="divider"></div>
+                    </div> 
+                {% endfor %}
 
             </div>
         </div>
