--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,13 @@ body{
   line-height: 2;
 }
 
+.navbar-fixed{
+  position: absolute !important;
+  top: 0;
+  right: 0;
+  left: 0;
+}
+
 .clearfix::after {
   content: "";
   clear: both;
@@ -116,3 +123,4 @@ footer.page-footer {
   bottom: -2px;
   right: 48%;
 }
+
