--- a/_includes/blog_latest_posts.html
+++ b/_includes/blog_latest_posts.html
@@ -1,21 +1,21 @@
 <section id="blog-latest-posts">
     <div class="container">
-        <div class="section">
+        <div id="blog-latest-post">
             <div class="row">
-                <div class="col s12 center grey-text text-darken-3">
+                <div id="blog-latest-post-head" class="col s12 center grey darken-3 grey-text text-lighten-3">
                     <h3>
+                            <i class="material-icons md-3">book</i>&nbsp;
                             آخرین مطالب وبلاگ
                     </h3>
-                    <div class="divider"></div>
                 </div>
                 {% for post in site.posts | limit: 3%}
                     <div class="col s12 m12 l4">
-                        <a href="{{ post.url }}" class="red-text text-darken-3 waves-effect waves-red"><h4>{{ post.title }}</h4></a>
+                        <a href="{{ post.url }}" class="grey-text text-darken-3"><h5>{{ post.title }}</h5></a>
                         <p>{{ post.excerpt }}</p>
-                        <a href="{{ post.url }}" class="left btn red darken-3 waves-effect waves-light">ادامه مطلب</a>
+                        <a href="{{ post.url }}" class="left btn grey darken-3 waves-effect waves-red">ادامه مطلب</a>
                         
                         <div class="clearfix"></div>
-                        <div class="divider"></div>
+                        <div class="divider hide-on-large-only"></div>
                     </div> 
                 {% endfor %}
 
