about section in intro.html was added and designed

--- a/_layouts/intro.html
+++ b/_layouts/intro.html
@@ -6,6 +6,10 @@ layout: default
 
 <div class="clearfix"></div>
 
+{% include about.html %}
+
+<div class="clearfix"></div>
+
 {% include blog_latest_posts.html %}
 
 <div class="clearfix"></div>
