intro header icons margin and description size changed

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,9 +5,9 @@
         <br><br>
         <h1 class="header center white-text">{{ site.title }}</h1>
         <div class="row center">
-          <h5 class="header col s12 light">{{ site.description }}</h5>
+          <h4 class="header col s12 light">{{ site.description }}</h4>
         </div>
-        <div class="row center hide-on-med-and-down">
+        <div id="header-top-icons" class="row center hide-on-small-only">
           <a href="{{ site.url }}/blog">
             <div class="col s6 m6 l3 xl3 center">
             <i class="fa fa-file-text fa-4x"></i><br><h2><h5>
