--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -8,10 +8,12 @@
                         <li><a href="{{ page.url }}"> {{ page.title }} </a></li>
                     {% endif %}
                 {% endfor %}
-                <li><a href="{{ site.url }}/feed.xml"><i class="fa fa-rss"></i></a></li>
+
+                <li><a href="https://github.com/iamrf/iamrf.github.io"><i class="fa fa-github fa-2x"></i></a></li>
+                <li><a href="{{ site.url }}/feed.xml"><i class="fa fa-rss fa-2x"></i></a></li>
             </ul>
 
-            <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+            <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons grey-text text-darken-3">menu</i></a>
         </div>
     </nav>
 </div>
@@ -23,5 +25,22 @@
         <li><a href="{{ page.url }}"> {{ page.title }} </a></li>
         {% endif %}
     {% endfor %}
-    <li><a href="{{ site.url }}/feed.xml"><i class="fa fa-rss"></i></a></li>
+
+    <hr>
+    <li>
+        <div class="row">
+            <div class="col s3">
+                <a href="{{ site.url }}/feed.xml" class="grey-text text-darken-3"><i class="fa fa-rss fa-2x"></i></a>
+            </div>
+            <div class="col s3">
+                <a href="https://github.com/iamrf/iamrf.github.io" class="grey-text text-darken-3"><i class="fa fa-github fa-2x"></i></a>
+            </div>
+            <div class="col s3">
+                <a href="{{ site.url }}/feed.xml" class="grey-text text-darken-3"><i class="fa fa-instagram fa-2x"></i></a>
+            </div>
+            <div class="col s3">
+                <a href="{{ site.url }}/feed.xml" class="grey-text text-darken-3"><i class="fa fa-linkedin fa-2x"></i></a>
+            </div>
+        </div>
+    </li>
 </ul>
