--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+@import "./rouge_theme_native.css";
+
  @viewport{
   zoom: 1.0;
   width: device-width;
@@ -29,6 +31,13 @@ body{
   box-sizing: border-box;
   height: 100%;
   line-height: 2;
+}
+
+pre{
+  direction: ltr !important;
+  text-align: left;
+  padding: .5rem .5rem;
+  color: #eee;
 }
 
 .navbar-fixed{
@@ -87,9 +96,10 @@ p {
   font-size: 1.2rem;
 
 }
-  .parallax-container .section {
-    width: 100%;
-  }
+
+.parallax-container .section {
+  width: 100%;
+}
 
 @media only screen and (max-width : 992px) {
   #index-banner .section {
@@ -165,4 +175,3 @@ footer.page-footer {
 #header-top-icons{
   margin-top: 5%;
 }
-
