--- a/_includes/header.html
+++ b/_includes/header.html
@@ -35,7 +35,7 @@
         </div>
         <br><br>
         
-        <a href="#blog-latest-posts" class="next-section-btn btn-large waves-effect waves-light pulse grey lighten-3 grey-text text-darken-3"><i class="fa fa-angle-double-down"></i></a>
+        <a href="#about" class="next-section-btn btn-large waves-effect waves-light pulse grey lighten-3 grey-text text-darken-3"><i class="fa fa-angle-double-down"></i></a>
 
       </div>
     </div>
