--- a/_includes/blog_latest_posts.html
+++ b/_includes/blog_latest_posts.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div id="blog-latest-post">
             <div class="row">
-                <div id="blog-latest-post-head" class="col s12 center grey darken-3 grey-text text-lighten-3">
+                <div id="" class="col s12 center grey darken-3 grey-text text-lighten-3 section-head-1">
                     <h4>
                             <i class="fa fa-book"></i>&nbsp;
                             آخرین مطالب وبلاگ
@@ -12,7 +12,7 @@
                     <div id="blog-latest-post-body" class="col s12 m12 l4">
                         <div class="card">
                             <span class="card-title">
-                                <a href="{{ post.url }}" class="grey-text text-darken-3"><i class="material-icons tiny">chevron_left</i> {{ post.title }}</a>
+                                <a href="{{ post.url }}" class="grey-text text-darken-3"><i class="fa fa-angle-left"></i>&nbsp; {{ post.title }}</a>
                             </span>
                             {% if post.thumbnail %}
                             <picture>
