travels section in intro and 4 examples created

--- a/_includes/blog_latest_articles.html
+++ b/_includes/blog_latest_articles.html
@@ -19,7 +19,7 @@
                         {% endif %}
                         <div class="card-content"><p>{{ article.excerpt }}</p></div>
                         
-                        <a href="{{ article.url }}" class="left btn grey darken-3 waves-effect waves-light">ادامه مطلب</a>
+                        <a href="{{ article.url }}" class="left btn grey darken-3 waves-effect waves-light">ادامه مقاله</a>
 
                         <div class="clearfix"></div>
                     </div>
@@ -27,7 +27,7 @@
             {% endfor %}
 
             <div id="" class="col s12 center link-to-collections">
-                <a href="{{ site.url }}/articles" class="btn btn-large red darken-4 red-text text-lighten-4 waves-effect"><i class="fa fa-file-text-o"></i>&nbsp;      مشاهده مقالات      </a>
+                <a href="{{ site.url }}/articles" class="btn btn-large red darken-4 red-text text-lighten-4 waves-effect"><i class="fa fa-file-text-o"></i>&nbsp;      مشاهده همه مقاله ها      </a>
             </div>
 
         </div>
