--- a/_layouts/intro.html
+++ b/_layouts/intro.html
@@ -26,6 +26,11 @@ layout: default
 
 <div class="clearfix"></div>
 
+{% include intro-travels.html %}
+
+<div class="clearfix"></div>
+
+
 <div class="container">
       <div class="section">
       
@@ -52,7 +57,7 @@ layout: default
               </p>
               </div>
           </div>
-      
+
           <div class="col s12 m4">
               <div class="icon-block">
               <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
