--- a/_includes/blog_latest_articles.html
+++ b/_includes/blog_latest_articles.html
@@ -1,3 +1,4 @@
+{% if site.articles %}
 <section id="blog-latest-articles">
     <div class="container">
         <div class="row">
@@ -33,3 +34,4 @@
         </div>
     </div>
 </section>
+{% endif %}
