--- a/_includes/blog_latest_articles.html
+++ b/_includes/blog_latest_articles.html
@@ -1,13 +1,23 @@
 {% if site.articles %}
 <section id="blog-latest-articles">
+
+    <div class="parallax-container valign-wrapper">
+        <div class="section no-pad-bot">
+            <div class="container">
+                <div class="row center">
+                    <h4>
+                            <i class="fa fa-list-alt"></i>&nbsp;
+                            آخرین مقاله ها
+                    </h4>
+                </div>
+            </div>
+        </div>
+        <div class="parallax"><img src="{{ site.url }}/assets/img/background1.jpg" alt="آخرین مقاله ها"></div>
+    </div>
+
     <div class="container">
         <div class="row">
-            <div id="" class="col s12 center grey darken-3 grey-text text-lighten-3 section-head-1">
-                <h4>
-                        <i class="fa fa-list-alt"></i>&nbsp;
-                        آخرین مقاله ها
-                </h4>
-            </div>
+            
             {% assign articles = site.articles | reverse %}
             {% for article in articles | limit:3 %}
                 <div class="col s12 m12 l4">
