portfolio section added to intro page

--- a/_includes/intro-travels.html
+++ b/_includes/intro-travels.html
@@ -1,5 +1,5 @@
 {% if site.travels %}
-<section id="intro-travels">
+<section id="travels">
 
     <div class="parallax-container valign-wrapper">
         <div class="section no-pad-bot">
