--- a/_layouts/intro.html
+++ b/_layouts/intro.html
@@ -22,7 +22,7 @@ layout: default
 
 <div class="clearfix"></div>
 
-{% include intro_second_parallax.html %}
+{% include intro-portfolio.html %}
 
 <div class="clearfix"></div>
 
