--- a/_includes/blog_latest_posts.html
+++ b/_includes/blog_latest_posts.html
@@ -20,7 +20,7 @@
 
                 {% for post in site.posts | limit: 3%}
                     <div id="blog-latest-post-body" class="col s12 m12 l4">
-                        <div class="card">
+                        <article id="{{ post.title }}" class="card">
                             <span class="card-title">
                                 <a href="{{ post.url }}" class="grey-text text-darken-3"><i class="fa fa-angle-left"></i>&nbsp; {{ post.title }}</a>
                             </span>
@@ -35,7 +35,7 @@
                             <a href="{{ post.url }}" class="left btn grey darken-3 waves-effect waves-light">ادامه مطلب</a>
 
                             <div class="clearfix"></div>
-                        </div>
+                        </article>
                     </div> 
                 {% endfor %}
 
